package ucf.assignments;

import javafx.application.Application;
import javafx.stage.Stage;

public class ToDoListManager extends Application {

    public static void main(String[] args) {
        launch(args);
    }

    @Override
    public void start(Stage primaryStage) {

    }
}
